# image-tagger

./: README.md  pyproject.toml  requirements.txt
scripts/: app.py  constants.py  prompt.py  tagger.py  tags_config.json
